# ekza-bevy

./: Cargo.toml  README.md
assets/models/chick/: chick.gltf
assets/scenes/: example.scn
src/: main.rs  model_loader.rs  scene.rs
